[project]
name = "follow-frame"
version = "0.1.0"
description = "Agentic meeting accountability system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.0",
    "langfuse>=2.60.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "resend>=2.4.0",
    "supabase>=2.10.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
